# dataframe_image

./: .gitignore  404.html  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  pyproject.toml.tmp  pytest.ini  setup.py  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: publish_conda.yml  python-package.yml
dataframe_image/: __init__.py  _browser_pdf.py  _bundler.py  _command_line.py  _convert.py  _exporters.py  _html2image.py  _image_maker.py  _latex_pdf.py  _matplotlib_table.py  _my_asyncio.py  _notebook_bundler.py  _pandas_accessor.py  _preprocessors.py  _screenshot.py  _to_image.py  _version.py  convert.py  download-chrome-headless-shell.py  image_maker.py  logger.py  pd_html.py  selenium_screenshot.py
dataframe_image/converter/: __init__.py  matplotlib_table.py
dataframe_image/converter/browser/: __init__.py  base.py  chrome_converter.py  html2image_converter.py  playwright_converter.py  selenium_converter.py
dataframe_image/converter/browser/static/: style.css
dataframe_image/css/: style.css
dataframe_image/static/: download.html  fail.html  form.html  style.css
docs/: index.md  whats_new.md
docs/overrides/: main.html
jupyter-config/nbconfig/notebook.d/: dataframe_image.json
notebooks/: Current Notebook Test.ipynb  Jupyter Notebook with dataframe_image.ipynb  Notebook with DataFrames (default).ipynb  Notebook with DataFrames (with dataframe_image).ipynb
notebooks/data/: covid19.csv
overrides/: main.html
search/: search_index.json
tests/: __init__.py  conftest.py  delete_test_results.py  dfi-dpi-change-check.xlsx  test_convert.py  test_df_image.py
tests/notebooks/: Notebook with DataFrames (default).ipynb  Notebook with DataFrames (with dataframe_image).ipynb  Short EXECUTED.ipynb  Short.ipynb  Test 1 EXECUTED.ipynb  Test 1.ipynb
tests/notebooks/data/: bikes.csv
tests/test_output/: README.md
whats_new/: index.html
